@@ -116,5 +116,4 @@ This manual page was written by Mark Ellis <mark_ellis@users.sourceforge.net>.
 .SH "SEE ALSO"
 .BR synce (7),
 .BR synce_info_new (3),
-.BR odccm (1),
 .BR vdccm (1)
