@@ -31,7 +31,7 @@ dccm
 .PP
 The dccm daemon negotiates the initial connection with a WM device, and may provide keep-alive signals and client connections, depending on the device version and flavour of dccm.
 
-There have been a number of dccm 'flavours'. The original, also known as synce-dccm, is now considered obsolete and should not be used. Vdccm is a natural progression of dccm which is not greatly used anymore. Odccm is the most common in use at the moment, and uses dbus to provide connections to both legacy and modern devices. Hal-dccm is now obsolete, it integrated the dccm functionality into hal to provide a more platform consistent interface. Dccm is now incorporated into the core package with libraries and tools, and uses udev and dbus.
+There have been a number of dccm 'flavours'. The original, also known as synce-dccm, is now considered obsolete and should not be used. Vdccm is a natural progression of dccm which is not greatly used anymore. Odccm started the modern type of dccm, and used dbus to provide connections to both legacy and modern devices, but is now obsolete. Hal-dccm is now obsolete, it integrated the dccm functionality into hal to provide a more platform consistent interface. Dccm is now incorporated into the core package with libraries and tools, and uses udev and dbus.
 
 
 The following steps are required to get started with SynCE:
@@ -39,12 +39,12 @@ The following steps are required to get started with SynCE:
 .SS 
 (1) Ensure the rndis kernel module or a serial connection mechanism is installed
 .PP
-To use advanced network features (rndis) with a WM5 or later device, which is recommended, you must use the usb-rndis-[lite|ng] driver from SynCE. For older devices or to use serial with WM5, if core dccm is not used you will require the synce-serial package. You will of course also need a dccm daemon, core dccm or odccm is recommended.
+To use advanced network features (rndis) with a WM5 or later device, which is recommended, you must use the usb-rndis-[lite|ng] driver from SynCE. For older devices or to use serial with WM5, if core dccm is not used you will require the synce-serial package. You will of course also need a dccm daemon, core dccm is recommended.
 
 .SS
 (2) Start the connection daemon (as root)
 .PP
-If using odccm, this daemon must run as the root user. With core dccm, dccm will be started as required. Older dccm implementations must be run as your user.
+With core dccm, dccm will be started as required. Older dccm implementations must be run as your user.
 
 .SS
 (3) Run tools that access the device (as user)
@@ -57,4 +57,4 @@ See http://www.synce.org/ for more information about the SynCE project.
 .PP
 This manual page was written by David Eriksson <twogood@users.sourceforge.net>. It was later updated by Jonny Lamb <jonnylamb@jonnylamb.com> and Mark Ellis <mark@mpellis.org.uk>.
 .SH "SEE ALSO"
-odccm(1)
+
